# otel-fastapi-noisemaker

./: .gitignore  README.md  SECURITY.md  aob_handler.py  get_topology.py  pyproject.toml  run.sh  run_collector.sh
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
otel_fastapi_noisemaker/: __init__.py  make_noise.py
tests/: test_nothing.py
