[tool.poetry]
name = "otel-fastapi-noisemaker"
version = "0.1.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
make_noise = "otel_fastapi_noisemaker.make_noise:main"

[tool.poetry.dependencies]
python = "^3.12"
opentelemetry-instrumentation-fastapi = "0.45b0"
opentelemetry-exporter-otlp = "1.24.0"
opentelemetry-distro = "0.45b0"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
click = "^8.1.7"
loguru = "^0.7.3"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.13.0"
pytest = "^8.3.4"
types-requests = "^2.32.0.20241016"

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "otel-fastapi-noisemaker"
description = ""
license = "MIT"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
